# operadar

./: .gitignore  README.md  README_INSTALLATION.md  common_settings.py  compute_CFADs.py  environment.yml  exec_computeCFAD.sh  exec_operad.sh  exec_operadar.sh  expe_olive.csv  generate_tables.sh  operad.py  operad_conf.py  operad_conf_AROME_ICE3.py  operad_conf_AROME_ICE4.py  operad_conf_MesoNH_CORSEsx.py  operad_lib.py  operadar_multi.py  pyproject.toml  read_arome.py  read_arome_lib.py  read_mesonh.py  read_tmatrix.py  requirements.txt  run_operad_belenos  save_dpolvar.py  setup.py  study_cases.csv  vortex_experiments.py
conf/: operad_conf_AROME_ICE3.py  operad_conf_MesoNH_CORSEbe.py  operad_conf_MesoNH_CORSEpx.py
configFiles/: conf_Arome_0.py  conf_Arome_ICE3.py  conf_Arome_ICE3_CORSEbe.py  conf_Arome_ICE3_VISULIMA.py  conf_Arome_ICE4.py  conf_Arome_LIMAAG.py  conf_Arome_LIMAC_VISULIMA.py  conf_Arome_LIMASG.py  conf_Arome_LIMA_CORSEbe.py  conf_Arome_LIMA_VISULIMA.py  conf_Arome_LIMA_VISULIMAcloe.py  conf_CORSEpx.py  conf_MesoNH_ADAPT_CORSEbe.py  conf_MesoNH_CIBU_CORSEbe.py  conf_MesoNH_CT250_CORSEbe.py  conf_MesoNH_ICE3_C3IELbe.py  conf_MesoNH_ICE3_CORSEbe.py  conf_MesoNH_ICE3_CORSEpx.py  conf_MesoNH_ICE3_CORSEsx.py  conf_MesoNH_LI250_CORSEbe.py  conf_MesoNH_LIMAAG_CORSEbe.py  conf_MesoNH_LIMA_CORSEbe.py  conf_MesoNH_LIMH_CORSEbe.py  conf_MesoNH_NOSHA_CORSEbe.py  conf_MesoNH_REF_CORSEbe.py  conf_MesoNH_WENO5_CORSEbe.py  conf_template.py  operad_conf_AROME_ICE3.py  operad_conf_AROME_ICE4.py  operad_conf_AROME_LIMAAG.py  operad_conf_AROME_LIMASG.py  operad_conf_MesoNH_ESPOIR.py  operad_conf_MesoNH_ICE3idpx.py  template.py  test_AROME.py  test_MesoNH.py
lib/: cfad_lib.py  compute_var_pol.py  csv_lib.py  level2alt.py  operad_lib.py  operad_utils.py  read_arome.py  read_arome_lib.py  read_mesonh.py  read_tmatrix.py  save_dpolvar.py
operadar/: __init__.py  __main__.py  cli.py  forward_operator.py  load_config_file.py  operad.py  operadar_utils.py  save_dpolvar.py
plot/: exec_statsCFADs.sh  level2alt.py  nohup.out  (+5 more)
(+290 files in other folders)
